adjust: api documentation #20220322004
