# app/Http/Controllers/Api/ApiController.php
@@ -33,6 +33,20 @@ use App\Http\Controllers\Controller;
  *              @OA\Property(property="name",type="string",description="個案姓名"),
  *              @OA\Property(property="gender_id",type="integer",description="個案性別"),
  *              @OA\Property(property="birthday",type="string",description="個案生日"),
+ *
+ *              @OA\Property(property="hometown_id",type="integer",description="個案籍貫（1閩南2外省3客家4原住民5其他）"),
+ *              @OA\Property(property="hometown_other",type="string",description="籍貫其他"),
+ *              @OA\Property(property="education_id",type="integer",description="教育程度（1不識字2識字，但未上過小學3國小4國中5高中(職)6大專7研究所以上）"),
+ *              @OA\Property(property="marriage_id",type="integer",description="婚姻（1未婚2同居3已婚4分居5離婚6喪偶）"),
+ *              @OA\Property(property="religion_id",type="integer",description="宗教（1無2佛教3基督教4天主教5回教6道教7其他）"),
+ *              @OA\Property(property="religion_other",type="string",description="宗教其他"),
+ *              @OA\Property(property="profession_id",type="integer",description="職業（1無2有3退休）"),
+ *              @OA\Property(property="profession_detail_id",type="integer",description="職業細節（1全職2兼職）"),
+ *              @OA\Property(property="income_id",type="integer",description="收入（1(2萬以下)、2(2萬元-4萬元以下)、3(4萬元-6萬元以下)、4(6萬元- 8萬元以下)、5(8萬元-10萬元以下)、6(10萬元以上)）"),
+ *              @OA\Property(property="source_id",type="integer",description="來源人數（1(1人)、2(2人)、3(3人)、4(4人)、5(5人)、6(6人)）"),
+ *
+ *              @OA\Property(property="diagnosed",type="string",description="確診日期"),
+ *
  *              @OA\Property(property="date",type="string",description="個案移植日期"),
  *              @OA\Property(property="transplant_type_id",type="integer",description="個案移植種類"),
  *              @OA\Property(property="disease_type_id",type="integer",description="個案疾病種類"),
@@ -70,10 +84,10 @@ use App\Http\Controllers\Controller;
  *              type="object",
  *              @OA\Property(property="id", type="integer", description="施打藥物紀錄編號", example=1),
  *              @OA\Property(property="case_id", type="integer", description="個案編號", example=1),
- *              @OA\Property(property="date", type="string", description="日期", example="1993-12-11"),
- *              @OA\Property(property="course", type="string", description="療程", example="Cycle4"),
- *              @OA\Property(property="type", type="string", description="施打藥物種類", example="藥物-N"),
- *              @OA\Property(property="dose", type="string", description="藥物劑量", example="622 mg"),
+ *              @OA\Property(property="type", type="string", description="藥物名稱", example="藥物-N"),
+ *              @OA\Property(property="start_date", type="string", description="施打日期起", example="1993-12-11"),
+ *              @OA\Property(property="end_date", type="string", description="施打日期迄", example="1993-12-11"),
+ *              @OA\Property(property="dose", type="string", description="施打藥物劑量總量", example="622 mg"),
  *          ),
  *          @OA\Schema(
  *              schema="report",
@@ -81,9 +95,10 @@ use App\Http\Controllers\Controller;
  *              @OA\Property(property="id", type="integer", description="報告各管師編號", example=1),
  *              @OA\Property(property="case_id", type="integer", description="個案編號", example=1),
  *              @OA\Property(property="date", type="date", description="回報日期", example="2022-03-10"),
- *              @OA\Property(property="physical_strength", type="string", description="體力狀況", example="很好"),
+ *              @OA\Property(property="physical_strength_id", type="integer", description="體力滿意度（5非常好4好3普通2不好1非常不好）", example="1"),
  *              @OA\Property(property="symptom", type="string", description="症狀", example="皮疹"),
- *              @OA\Property(property="hospital", type="string", description="固定回診醫院", example="高醫"),
+ *              @OA\Property(property="hospital_id", type="integer", description="固定回診醫院（1高醫2大同3小港4其他）", example="1"),
+ *              @OA\Property(property="hospital_other", type="string", description="固定回診醫院其他", example="高醫"),
  *          ),
  *          @OA\Schema(
  *              schema="category_1",
@@ -98,7 +113,8 @@ use App\Http\Controllers\Controller;
  *              @OA\Property(property="id", type="integer", description="任務編號", example=1),
  *              @OA\Property(property="category_1", type="integer", description="類別1", example=1),
  *              @OA\Property(property="category_2", type="string", description="類別2", example="2-2"),
- *              @OA\Property(property="name", type="string", description="任務名稱", example="造血幹細胞移植分類-異體造血幹細胞移植"),
+ *              @OA\Property(property="name", type="string", description="任務名稱", example="移植前評估-費用"),
+ *              @OA\Property(property="short", type="string", description="任務短名稱", example="費用"),
  *          ),
  *          @OA\Schema(
  *              schema="case-task",
